Produzione/force-app/main/default/objects/Opzione_Domanda__c/fields/Etichetta_Risultati_EN__c.field-meta.xml
<CustomField>
    <fullName>Etichetta_Risultati_EN__c</fullName>
    <label>Etichetta Risultati EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>