Produzione/force-app/main/default/objects/Opzione_Domanda__c/fields/Insieme_Opzioni_Domanda__c.field-meta.xml
<CustomField>
    <fullName>Insieme_Opzioni_Domanda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insieme Opzioni Domanda</label>
    <referenceTo>Insieme_Opzioni_Domanda__c</referenceTo>
    <relationshipLabel>Opzioni Domande</relationshipLabel>
    <relationshipName>Opzioni_Domande</relationshipName>
    <type>Lookup</type>
</CustomField>