Produzione/force-app/main/default/objects/Opzione_Domanda__c/fields/Opzione_Domanda_IT__c.field-meta.xml
<CustomField>
    <fullName>Opzione_Domanda_IT__c</fullName>
    <label>Opzione Domanda IT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>