Produzione/force-app/main/default/objects/Opzione_Domanda__c/fields/Ordine__c.field-meta.xml
<CustomField>
    <fullName>Ordine__c</fullName>
    <label>Ordine</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>