Produzione/force-app/main/default/objects/Opzione_Domanda__c/fields/Valore_Numerico__c.field-meta.xml
<CustomField>
    <fullName>Valore_Numerico__c</fullName>
    <label>Valore Numerico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>